Toevoegen link codelijst + minor edits

--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -105,17 +105,14 @@
 
 			<section class="region">
 				<div class="layout layout--wide">
-					<p>Een applicatieprofiel is een specificatie voor gegevensuitwisseling voor applicaties die een bepaalde use case vervullen. Het laat toe om bijkomende restricties op te leggen, zoals het vastleggen van kardinaliteiten of het gebruik van bepaalde codelijsten. Een applicatieprofiel kan dienen als documentatie voor analisten en ontwikkelaars.</p>
+					<p>De <em>vocabularia</em> op deze pagina zijn de basis voor open semantische informatiestandaarden, ze bieden een gedeeld begrippenkader voor bepaalde concepten met een focus op gegevensuitwisseling en zijn tot stand gekomen in de werkgroep <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a> van Informatie Vlaanderen.</p>
 					<br>
 
-
-					<p>De vocabularia op deze pagina zijn de basis voor open semantische informatiestandaarden, ze bieden een gedeeld begrippenkader voor bepaalde concepten met een focus op gegevensuitwisseling en zijn tot stand gekomen in de werkgroep <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2" target="_blank">OSLO²</a> van Informatie Vlaanderen.</p>
+					<p>Een <em>applicatieprofiel</em> is een specificatie voor gegevensuitwisseling voor applicaties die een bepaalde use case vervullen. Het laat toe om naast een gedeelde semantiek ook bijkomende restricties op te leggen, zoals het vastleggen van kardinaliteiten of het gebruik van bepaalde codelijsten. Een applicatieprofiel kan dienen als documentatie voor analisten en ontwikkelaars.</p>
 					<br>
-
 
 					<p>De informatie in de vocabularia en applicatieprofielen is georganiseerd volgens het <a href="http://www.w3.org/TR/2004/REC-rdf-primer-20040210/" target="_blank">Resource Description Framework (RDF)</a>, wat ze geschikt maakt voor gebruik in Linked Data toepassingen.</p>
 					<br>
-
 
 					<div class="alert alert--cta">
 						<div class="alert__content">
@@ -278,7 +275,7 @@
 								<li><a class="link--icon--caret" href="#">Participatierol</a></li>
 								<li><a class="link--icon--caret" href="#">UpdateFrequentie</a></li>
 								<li><a class="link--icon--caret" href="#">TypeDossier</a></li>
-								<li><a class="link--icon--caret" href="#">StatusVlaamsCode</a></li>
+								<li><a class="link--icon--caret" href="../dienst/statusvlaamsefase.html">StatusVlaamsCode</a></li>
 								<li><a class="link--icon--caret" href="#">StatusVlaamsFase</a></li>
 								<li><a class="link--icon--caret" href="#">StatusEDRL</a></li>
 							</ul>
