Link codelijst fix

--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -275,8 +275,8 @@
 								<li><a class="link--icon--caret" href="#">Participatierol</a></li>
 								<li><a class="link--icon--caret" href="#">UpdateFrequentie</a></li>
 								<li><a class="link--icon--caret" href="#">TypeDossier</a></li>
-								<li><a class="link--icon--caret" href="../dienst/statusvlaamsefase.html">StatusVlaamsCode</a></li>
-								<li><a class="link--icon--caret" href="#">StatusVlaamsFase</a></li>
+								<li><a class="link--icon--caret" href="#">StatusVlaamsCode</a></li>
+								<li><a class="link--icon--caret" href="../dienst/statusvlaamsefase.html" target="_blank">StatusVlaamsFase</a></li>
 								<li><a class="link--icon--caret" href="#">StatusEDRL</a></li>
 							</ul>
 
