--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -50,11 +50,9 @@
 					<div class="grid">
 						<div class="col--8-12 col--12-12--s">
 							<div class="typography introduction">
-								<a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> ontsluit data volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Dit domein past binnen de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Het project <a href="https://overheid.vlaanderen.be/producten-diensten/OSLO2">Open Standaarden voor Linkende Overheden</a> (OSLO&#178;) is de overkoepelende drijvende kracht achter de dienstverlening van Data.Vlaanderen.be.
-
-								<p>
-								</p>
+								<p style="text-align:justify;">In de digitale samenleving wordt van de overheid verwacht dat ze overheidsdata ontsluit volgens een breed gedragen methode. Data.Vlaanderen.be is het domein waarop het <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Naast enkele datasets biedt Data.Vlaanderen.be ook toegang tot de standaarden, informatiemodellen, tools en documentatie die gebruikers in staat stellen aan de slag te gaan met de beschikbare data.</p>
 							</div>
+							<p><br/><br/>Dit domein past binnen de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Alle identificatoren van informatieresources (bijvoorbeeld adressen) die beschikbaar zijn via dit domein in de vorm van een URI zijn persistent en semantisch éénduidig. Met andere woorden, gebruikers van de URI's met als domein data.vlaanderen.be kunnen ervan uitgaan dat deze identificatoren steeds zullen blijven bestaan en dat in de loop van de tijd deze identificatoren steeds zullen verwijzen naar één en hetzelfde object.</p>
 						</div>
 
 
@@ -267,22 +265,15 @@
 					<h3 class="h3">URI standaard</h3>
 
 
-					<p>Centraal in de URI-standaard staan een aantal vormregels die omschrijven op welke wijze je een URI moet opbouwen. Gebruik makend van de vormregels voor URI’s zal via de URI-standaard een lijst van resource-classificaties toegelicht worden. Die moeten alle resource-aanbieders binnen de Vlaamse overheden gebruiken bij het opzetten van nieuwe URI’s om hun resources uniek en persistent te ontsluiten.</p>
+					<p>Centraal in de URI-standaard staan een aantal vormregels die omschrijven op welke wijze een URI moet gevormd worden om te dienen als identificator voor data. Gebruik makend van de vormregels voor URI’s licht de URI-standaard een lijst van resource-classificaties toe. Die moeten alle resource-aanbieders binnen de Vlaamse overheden gebruiken bij het opzetten van nieuwe URI’s om hun resources uniek en persistent te ontsluiten.</p>
 					<br>
 					<a class="link--icon--caret link--block" href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Ontdek hier meer over de Vlaamse URI standaard.</a><br>
-
-
-					<h3 class="h3">API standaard</h3>
-
-
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<br>
 
 
 					<h3 class="h3">OSLO&#178; Specificaties (kandidaat-standaarden)</h3>
 
 
-					<p>Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO&#178; van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO&#178; specificaties gepromoot tot volwaardige standaarden.</p>
+					<p>Omvatten open semantische informatiestandaarden en specificaties voor gegevensuitwisseling. Op 31 maart 2017 werden een aantal vocabularia en applicatieprofielen als kandidaat-standaard gepubliceerd door de werkgroep OSLO&#178; van Informatie Vlaanderen. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze kandidaat-standaarden. Na deze evaluatieperiode, waarbij aan de hand van referentie implementaties de robuustheid en de volledigheid van de vocabularia en de applicatieprofielen worden getest, worden de OSLO&#178; specificaties gepromoot tot volwaardige standaarden.</p>
 					<br>
 
 
@@ -318,12 +309,12 @@
 										<li class="col--6-12 col--12-12--s">
 											<ul class="link-list">
 												<li>
-													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="331988" data-drawer-id="related-questions" href="#">Zijn de identifactoren van informatie-objecten die beschikbaar zijn via dit domein in de vorm van een URI persistent en semantisch éénduidig?</a>
+													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="331988" data-drawer-id="related-questions" href="#">Wat zijn persistente en semantisch eenduidige identificatoren?</a>
 												</li>
 
 
 												<li>
-													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="270933" data-drawer-id="related-questions" href="#">Wat is een vocabularium en applicatieprofiel en hoe verhouden beiden zich tegenover elkaar?</a>
+													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="398754" data-drawer-id="related-questions" href="#">Wat is een informatieresource?</a>
 												</li>
 											</ul>
 										</li>
@@ -332,7 +323,24 @@
 										<li class="col--6-12 col--12-12--s">
 											<ul class="link-list">
 												<li>
+													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="270933" data-drawer-id="related-questions" href="#">Waar lees ik meer over vocabularia, applicatieprofielen en hoe deze zich verhouden tengenover elkaar?</a>
+												</li>
+
+												<li>
 													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="270936" data-drawer-id="related-questions" href="#">Hoe gebruik ik de vocabularia en applicatieprofielen om interoperabele toepassingen en web services te ontwikkelen?</a>
+												</li>
+											</ul>
+										</li>
+
+
+										<li class="col--6-12 col--12-12--s">
+											<ul class="link-list">
+												<li>
+													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="473598" data-drawer-id="related-questions" href="#">Wat is het verschil tussen Data.Vlaanderen.be en het Vlaamse Open Data portaal?</a>
+												</li>
+												
+												<li>
+													<a class="toggle--arrow-down link--icon--caret link--block" data-drawer-content-id="894329" data-drawer-id="related-questions" href="#">Welke datasets kan ik terug vinden op Data.Vlaanderen.be?</a>
 												</li>
 											</ul>
 										</li>
@@ -355,7 +363,23 @@
 										<div class="grid grid--align-center">
 											<div class="col--8-12 col--12-12--s col--6-12--l">
 												<div class="content typography">
-													<p>Alle identificatoren van informatie-objecten die beschikbaar zijn via dit domein in de vorm van een URI zijn persistent en semantisch éénduidig. Met andere woorden, gebruikers van de URI's met als domein data.vlaanderen.be kunnen ervan uitgaan dat deze identificatoren steeds zullen blijven bestaan en dat in de loop van de tijd deze identificatoren steeds zullen verwijzen naar één en hetzelfde object.</p>
+													<p>Identificatoren van informatieresources zijn persistent wanneer ze in de loop van tijd steeds verwijzen naar één en hetzelfde object. Bovendien zijn ze semantisch eenduidig wanneer ze de vormregels van de <a class="link--icon--caret link--block" href="https://overheid.vlaanderen.be/OSLO-URI-standaard">URI standaard</a> volgen.</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="drawer__content" data-drawer-content="398754">
+							<div class="">
+								<div class="layout layout--wide">
+									<div class="layout__wrapper">
+										<div class="grid grid--align-center">
+											<div class="col--8-12 col--12-12--s col--6-12--l">
+												<div class="content typography">
+													<p>Informatieresource zijn dingen die een digitale representatie (kunnen) hebben zoals data en webservices. Informatieresources kunnen ook niet-informatieresources (zaken of gebeurtenissen uit de 'echte wereld') <strong>beschrijven</strong>, bijvoorbeeld een webpagina kan een gebouw beschrijven. Meer hierover lees je in de <a class="link--icon--caret link--block" href="https://overheid.vlaanderen.be/OSLO-URI-standaard">URI standaard</a>.</p>
 												</div>
 											</div>
 										</div>
@@ -372,10 +396,7 @@
 										<div class="grid grid--align-center">
 											<div class="col--8-12 col--12-12--s col--6-12--l">
 												<div class="content typography">
-													<p>Vocabularia beschrijven semantiek, de concepten die beschreven worden zijn bruikbaar in verschillende toepassingsdomeinen. Applicatieprofielen zijn specificaties voor gegevensuitwisseling in bepaalde use cases. De OSLO&#178; vocabularia en applicatieprofielen zijn gepubliceerd als kandidaat-standaarden.</p>
-
-
-													<p>Lees hierover meer op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
+													<p>Meer informatie lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
 												</div>
 											</div>
 										</div>
@@ -392,7 +413,41 @@
 										<div class="grid grid--align-center">
 											<div class="col--8-12 col--12-12--s col--6-12--l">
 												<div class="content typography">
-													<p>Neem hiervoor zeker onze <a href="#">documentatie</a> door.</p>
+													<p>In tegenstelling tot het Vlaamse Open Data Portaal focust Data.Vlaanderen.be zich op gegevensuitwisseling tussen Vlaamse overheden en diens partners. Data.Vlaanderen.be biedt naast datasets ook informatie met betrekking tot standaarden, informatiemodellen en tools.</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="drawer__content" data-drawer-content="473598">
+							<div class="">
+								<div class="layout layout--wide">
+									<div class="layout__wrapper">
+										<div class="grid grid--align-center">
+											<div class="col--8-12 col--12-12--s col--6-12--l">
+												<div class="content typography">
+													<p>Op Data.Vlaanderen.be vindt je datasets die <a href="https://overheid.vlaanderen.be/basisregisters-en-oslo" target="_blank">Vlaamse basisregisters</a> in hun geheel of gedeeltelijk ontsluiten. De eerste dataset die gepubliceerd werd is het adressenregister (CRAB).</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="drawer__content" data-drawer-content="894329">
+							<div class="">
+								<div class="layout layout--wide">
+									<div class="layout__wrapper">
+										<div class="grid grid--align-center">
+											<div class="col--8-12 col--12-12--s col--6-12--l">
+												<div class="content typography">
+													<p>Meer informatie lees je op een bevattelijke manier in deze <a href="https://overheid.vlaanderen.be/sites/default/files/documenten/informatie-vlaanderen/producten/OSLO/OSLO%20Infodag%2031032017%20Final.pdf">presentatie</a>.</p>
 												</div>
 											</div>
 										</div>
