Update status tekst

--- a/melding/melding-test.html
+++ b/melding/melding-test.html
@@ -190,7 +190,7 @@
                           Dit document is een specificatie van een vocabularium en biedt een gedeeld begrippenkader voor bepaalde concepten.
                           Deze specificatie dient om de definitie, gebruik, domein en bereik van de RDF termen binnen dit domein te verduidelijken.
                         </p><br/>
-                        <p>Op 31 maart 2017 werd deze specificatie als Kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen en voorgelegd aan het stuurorgaan Vlaams Informatie- en ICT-beleid. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze Kandidaat-standaard. Na deze evaluatieperiode wordt dit document gepromoot tot Standaard in het beschreven domein.</p><br/>     
+                        <p>Op 31 maart 2017 werd deze specificatie als Kandidaat-standaard gepubliceerd door de werkgroep OSLO² van Informatie Vlaanderen en voorgelegd aan het stuurorgaan Vlaams Informatie- en ICT-beleid. Vanaf deze datum startte een 6 maanden durende evaluatieperiode van deze Kandidaat-standaard. Na deze evaluatieperiode en het behandelen van eventuele feedback wordt dit document gepromoot tot Standaard in het beschreven domein.</p><br/>     
                         
                         <p>Feedback op deze specificatie kan gegeven worden via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
                    
