--- a/data.vlaanderen.be/index.html
+++ b/data.vlaanderen.be/index.html
@@ -50,7 +50,7 @@
 					<div class="grid">
 						<div class="col--8-12 col--12-12--s">
 							<div class="typography introduction">
-								<p style="text-align:justify;">In de digitale samenleving wordt van de overheid verwacht dat ze overheidsdata ontsluit volgens een breed gedragen methode. Data.Vlaanderen.be is het domein waarop het <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Naast enkele datasets biedt Data.Vlaanderen.be ook toegang tot de standaarden, informatiemodellen, tools en documentatie die gebruikers in staat stellen aan de slag te gaan met de beschikbare data.</p>
+								<p style="text-align:justify;">In de digitale samenleving wordt van de overheid verwacht dat ze overheidsdata ontsluit volgens een breed gedragen methode. Data.Vlaanderen.be is het domein waarop het <a href="http://www.vlaanderen.be/informatievlaanderen">Agentschap Informatie Vlaanderen</a> data ontsluit volgens de principes beschreven in de <a href="https://overheid.vlaanderen.be/OSLO-URI-standaard">Vlaamse URI standaard</a>. Naast enkele datasets biedt Data.Vlaanderen.be ook toegang tot de standaarden, informatiemodellen, tools en documentatie die gebruikers in staat stellen aan de slag te gaan met data.</p>
 							</div>
 							<p><br/><br/>Dit domein past binnen de doelstelling van de Vlaamse overheid om in te zetten op een éénduidige standaard voor de uitwisseling van informatie. Alle identificatoren van informatieresources (bijvoorbeeld adressen) die beschikbaar zijn via dit domein in de vorm van een URI zijn persistent en semantisch éénduidig. Met andere woorden, gebruikers van de URI's met als domein data.vlaanderen.be kunnen ervan uitgaan dat deze identificatoren steeds zullen blijven bestaan en dat in de loop van de tijd deze identificatoren steeds zullen verwijzen naar één en hetzelfde object.</p>
 						</div>
@@ -162,7 +162,7 @@
 								<div class="doormat__title">
 									Handleiding
 								</div>
-								<span class="doormat__text">Ontdek hier hoe je interoperabele toepassingen en web services ontwikkeld via Open Standaarden voor Linkende Organisaties (OSLO&#178;).</span></a>
+								<span class="doormat__text">Ontdek hier hoe je interoperabele toepassingen en web services ontwikkelt via Open Standaarden voor Linkende Organisaties (OSLO&#178;).</span></a>
 							</li>
 						</ul>
 					</div>
