--- a/data.vlaanderen.be/ns.html
+++ b/data.vlaanderen.be/ns.html
@@ -263,7 +263,7 @@
 					<p>Raadpleeg hier de beschikbare codelijsten per applicatieprofiel.</p>
 					<br>
 
-					<p>De volgende applicatieprofielen definiëren geen codelijsten: Generiek Basis, Adresregister, Organisatie Basis, Persoon Basis, Dienstencataloog, Persoon Burgerloket.</p>
+					<p>De volgende applicatieprofielen definiëren geen codelijsten: Generiek Basis, Adresregister, Organisatie Basis, Persoon Basis, Persoon Burgerloket.</p>
 					<br>
 
 					<div class="info-block__content">
@@ -271,43 +271,29 @@
 							<!-- component -->
 
 							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Adresregister</h5></li>
+								<li><a class="link--icon--caret" href="http://inspire.ec.europa.eu/codelist/LocatorLevelValue">Locatorniveauwaarde</a></li>
+								<li><a class="link--icon--caret" href="http://inspire.ec.europa.eu/codelist/LocatorDesignatorTypeValue">Locatieaanduidingtype</a></li>
+								<li><a class="link--icon--caret" href="http://inspire.ec.europa.eu/codelist/LocatorNameTypeValue">Locatienaamtype</a></li>
+								<li><a class="link--icon--caret" href="http://inspire.ec.europa.eu/codelist/StatusValue">Statuswaarde</a></li>
+							</ul>
+
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
+								<li class="u-hr"><h5 class="h5">Dienstencataloog</h5></li>
+								<li><a class="link--icon--caret" href="http://publications.europa.eu/mdr/authority/language/">NAL Language</a></li>
+								<li><a class="link--icon--caret" href="http://joinup.ec.europa.eu/asset/cpsv-ap/Distribution/CPSV-AP_Specification_v2.0/PDF">GebeurtenisType</a></li>
+								<li><a class="link--icon--caret" href="http://joinup.ec.europa.eu/asset/cpsv-ap/Distribution/CPSV-AP_Specification_v2.0/PDF">KanaalType</a></li>
+								<li><a class="link--icon--caret" href="http://joinup.ec.europa.eu/asset/cpsv-ap/Distribution/CPSV-AP_Specification_v2.0/PDF">OutputType</a></li>
+								<li><a class="link--icon--caret" href="http://ec.europa.eu/competition/mergers/cases/index/nace_all.html">NACE</a></li>
+								<li><a class="link--icon--caret" href="http://purl.org/adms/status/">ADMSStatusVocabularium</a></li>
+								<li><a class="link--icon--caret" href="ttp://publications.europa.eu/mdr/authority/atu/index.html">ATU</a></li>
+								<li><a class="link--icon--caret" href="https://unstats.un.org/unsd/cr/registry/regcst.asp?Cl=4">COFOG</a></li>
+								<li><a class="link--icon--caret" href="http://publications.europa.eu/mdr/authority/currency/">NAL Currency</a></li>
+							</ul>
+
+							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
 								<li class="u-hr"><h5 class="h5">Dienstverlening Transactiemodel</h5></li>
-								<li><a class="link--icon--caret" href="#">Participatierol</a></li>
-								<li><a class="link--icon--caret" href="#">UpdateFrequentie</a></li>
-								<li><a class="link--icon--caret" href="#">TypeDossier</a></li>
-								<li><a class="link--icon--caret" href="#">StatusVlaamsCode</a></li>
 								<li><a class="link--icon--caret" href="../dienst/statusvlaamsefase.html" target="_blank">StatusVlaamsFase</a></li>
-								<li><a class="link--icon--caret" href="#">StatusEDRL</a></li>
-							</ul>
-
-							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-								<li class="u-hr"><h5 class="h5">Melding Basis</h5></li>
-								<li><a class="link--icon--caret" href="#">Rol</a></li>
-								<li><a class="link--icon--caret" href="#">StatusType</a></li>
-								<li><a class="link--icon--caret" href="#">Meldingstype</a></li>
-								<li><a class="link--icon--caret" href="#">Datatype</a></li>
-							</ul>
-
-							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-								<li class="u-hr"><h5 class="h5">Persoon Profiel</h5></li>
-								<li><a class="link--icon--caret" href="#">ProfielStatus</a></li>
-								<li><a class="link--icon--caret" href="#">AdresVoorstellingType</a></li>
-								<li><a class="link--icon--caret" href="#">BurgelijkeStaatType</a></li>
-								<li><a class="link--icon--caret" href="#">TaalType</a></li>
-							</ul>
-
-							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-								<li class="u-hr"><h5 class="h5">Notificatie Profiel</h5></li>
-								<li><a class="link--icon--caret" href="#">StatusNotificatie</a></li>
-								<li><a class="link--icon--caret" href="#">PermissieType</a></li>
-								<li><a class="link--icon--caret" href="#">Notificiatiekanaal</a></li>
-								<li><a class="link--icon--caret" href="#">NotificatieType</a></li>
-							</ul>
-
-							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-								<li class="u-hr"><h5 class="h5">Vastgoed Basis</h5></li>
-								<li><a class="link--icon--caret" href="#">FunctieCodelijst</a></li>
-								<li><a class="link--icon--caret" href="#">GebouweenheidStatusCodelijst</a></li>
 							</ul>
 							<!-- end component -->
 						</div>
