Toevoegen model Toestemming

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <li><a href="profiel/profiel.html" target="_blank">Profiel</a></li>
     <li><a href="notificatie/notificatie.html" target="_blank">Notificatie</a></li>
     <li><a href="vastgoed/vastgoed.html" target="_blank">Vastgoed</a></li>
+    <li><a href="toestemming/toestemming.html" target="_blank">Toestemming</a></li>
   </ul>
   <h1>JSON-LD Context</h1>
   <ul>
@@ -34,6 +35,7 @@
     <li><a href="profiel/profiel.jsonld" target="_blank">Profiel</a></li>
     <li><a href="notificatie/notificatie.jsonld" target="_blank">Notificatie</a></li>
     <li><a href="vastgoed/vastgoed.jsonld" target="_blank">Vastgoed</a></li>
+    <li><a href="toestemming/toestemming.jsonld" target="_blank">Toestemming</a></li>
   </ul>
   <h1>Applicatieprofielen</h1>
   <ul>
@@ -43,6 +45,7 @@
     <li><a href="profiel/profiel-ap.html" target="_blank">Profiel AP</a></li>
     <li><a href="notificatie/notificatie-ap.html" target="_blank">Notificatie AP</a></li>
     <li><a href="vastgoed/vastgoed-ap.html" target="_blank">Vastgoed AP</a></li>
+    <li><a href="toestemming/toestemming-ap.html" target="_blank">Toestemming AP</a></li>
   </ul>
   <h1>data.vlaanderen.be</h1>
   <ul>
