Aanpassingen data.vlaanderen.be en folder structuur

--- a/ns/adres.html
+++ b/ns/adres.html
@@ -48,7 +48,7 @@
 
                         <dt>Laatste versie</dt>
 
-                        <dd><a href="http://data.vlaanderen.be/ns/besluit">http://data.vlaanderen.be/ns/adres</a>
+                        <dd><a href="http://data.vlaanderen.be/ns/adres">http://data.vlaanderen.be/ns/adres</a>
                         </dd>
 
                         
