--- a/pwc/data.vlaanderen.be/index.html
+++ b/pwc/data.vlaanderen.be/index.html
@@ -91,9 +91,11 @@
 
 
 									<ul>
+										<!--
 										<li class="side-navigation__item">
 											<a class="link--icon--caret link--icon--block" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing">Handleiding</a>
 										</li>
+									    -->
 
 
 										<li class="side-navigation__item">
@@ -140,7 +142,7 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html#vocabularia" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/index.html#vocabularia" id="doormat">
 								<div class="doormat__title">
 									Vocabularia
 								</div>
@@ -149,14 +151,14 @@
 
 
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
-								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html#applicatieprofielen" id="doormat">
+								<a class="doormat js-equal-height u-mobile-no-equal-height" href="http://data.vlaanderen.be/ns/index.html#applicatieprofielen" id="doormat">
 								<div class="doormat__title">
 									Applicatieprofielen
 								</div>
 								<span class="doormat__text">Ontdek hier de beschikbare applicatieprofielen gepubliceerd als kandidaat-standaarden. Applicatieprofielen zijn specificaties voor gegevensuitwisseling in bepaalde use cases.</span></a>
 							</li>
 
-
+<!--
 							<li class="col--4-12 col--1-2--s col--12-12--xs">
 								<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://docs.google.com/document/d/1tbK17wmgkIlNOXjYRE3Arf3PMI--8TvidBprKOcgcvQ/edit?usp=sharing" id="doormat">
 								<div class="doormat__title">
@@ -164,6 +166,7 @@
 								</div>
 								<span class="doormat__text">Ontdek hier hoe je interoperabele toepassingen en web services ontwikkelt via Open Standaarden voor Linkende Organisaties (OSLO&#178;).</span></a>
 							</li>
+-->
 						</ul>
 					</div>
 				</div>
@@ -215,7 +218,7 @@
 							<a class="spotlight" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data">
 							<article>
 								<header class="spotlight__header">
-									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="https://raw.githubusercontent.com/pwc-technology-be/oslo/master/data.vlaanderen.be/images/map-small.png">
+									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="images/map-small.png">
 									</div>
 
 
@@ -236,7 +239,7 @@
 							<a class="spotlight" href="http://lokaalbestuur.vlaanderen.be/lokale-besluiten-als-gelinkte-open-data">
 							<article>
 								<header class="spotlight__header">
-									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="https://raw.githubusercontent.com/pwc-technology-be/oslo/master/data.vlaanderen.be/images/files-small.png">
+									<div class="spotlight__image spotlight__image--focus-center-center"><img alt="" class="spotlight__image__img" src="images/files-small.png">
 									</div>
 
 
@@ -279,7 +282,17 @@
 
 					<p>Feedback kan je geven via <a href="mailto:oslo@kb.vlaanderen.be">email</a> of als een topic in onze <a href="https://github.com/Informatievlaanderen/OSLO-Public-Discussion">publieke reviewdiscussielijst</a>.</p>
 					<br>
-					<a class="link--icon--caret link--block" href="https://pwc-technology-be.github.io/oslo/data.vlaanderen.be/ns.html">Ontdek hier de beschikbare vocabularia en applicatieprofielen.</a>
+					<a class="link--icon--caret link--block" href="http://data.vlaanderen.be/ns">Ontdek hier de beschikbare vocabularia en applicatieprofielen.</a>
+
+					<h3 class="h3">Standaard voor het metadateren en publiceren van linked open data</h3>
+
+					<p>Een aantal elementen uit de standaard zijn gemeenschappelijk omdat ze zowel gelden voor het metadateren
+					van LOD-producten, als gelden voor het open beleid van LOD-producten. (Deze standaard krijgen een MD/ODcode.)
+					Een aantal elementen uit de standaard zijn specifiek en gaan enkel over of het metadateren of het open
+					beleid van LOD-producten. (Deze specifieke elementen uit de standaard krijgen in dat geval enkel een MD-code
+					of een OD-code.)</p>
+					<br>
+					<a class="link--icon--caret link--block" href="Standaard_Metadata_Opendata_LODproducten_20_07_2017_v11.pdf">Lees hier de Standaard voor het metadateren en publiceren van linked open data.</a>
 				</div>
 			</section>
 
@@ -288,8 +301,44 @@
 				<div class="layout layout--wide">
 					<h2 class="h2 u-named-anchor" id="Tools">Tools</h2>
 
+					<div class="grid grid--is-stacked u-spacer">
+						<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
+							<a class="spotlight" href="https://github.com/Informatievlaanderen/OSLO-EA-to-RDF" target="_blank">
+							<article>
+								<header class="spotlight__header">
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+
+									<div class="spotlight__title-wrapper">
+										<h1 class="spotlight__title">OSLO-EA-to-RDF</h1>
+									</div>
+								</header>
+
+
+								<div class="spotlight__text">
+									Deze tool werd ontwikkeld als onderdeel van het OSLO² project en biedt gebruikers een geautomatiseerde manier om vocabularia te creëren op basis van een Enterprise Architect bestand. 
+								</div>
+							</article></a>
+						</div>
+
+
+						<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
+							<a class="spotlight" href="https://github.com/Informatievlaanderen/OSLO-SpecificationGenerator" target="_blank" >
+							<article>
+								<header class="spotlight__header">
+
+
+									<div class="spotlight__title-wrapper">
+										<h1 class="spotlight__title">OSLO-SpecificationGenerator</h1>
+									</div>
+								</header>
+
+
+								<div class="spotlight__text">
+									Deze tool werd ontwikkeld als onderdeel van het OSLO² project en dient om op basis van RDF vocabularia automatisch specificatiedocumenten in HTML te creëren via een Command Line Interface (CLI).
+								</div>
+							</article></a>
+						</div>
+					</div>
 				</div>
 			</section>
 
