--- a/ns/dienst.html
+++ b/ns/dienst.html
@@ -48,7 +48,7 @@
 
                         <dt>Laatste versie</dt>
 
-                        <dd><a href="http://data.vlaanderen.be/ns/besluit">http://data.vlaanderen.be/ns/dienst</a>
+                        <dd><a href="http://data.vlaanderen.be/ns/dienst">http://data.vlaanderen.be/ns/dienst</a>
                         </dd>
 
                         
