--- a/ns/generiek.html
+++ b/ns/generiek.html
@@ -48,7 +48,7 @@
 
                         <dt>Laatste versie</dt>
 
-                        <dd><a href="http://data.vlaanderen.be/ns/besluit">http://data.vlaanderen.be/ns/generiek</a>
+                        <dd><a href="http://data.vlaanderen.be/ns/generiek">http://data.vlaanderen.be/ns/generiek</a>
                         </dd>
 
                         
