--- a/ns/index.html
+++ b/ns/index.html
@@ -145,7 +145,7 @@
 						<div id="doormats">
 							<ul class="grid grid--is-stacked js-equal-height-container">
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="../doc/ap/generiek/" id="doormat">
 									<div class="doormat__title">
 										Applicatieprofiel Generiek Basis
 									</div>
@@ -154,7 +154,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="../doc/ap/adres/" id="doormat">
 									<div class="doormat__title">
 										Applicatieprofiel Adresregister
 									</div>
@@ -163,7 +163,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="../doc/ap/organisatie/" id="doormat">
 									<div class="doormat__title">
 										Applicatieprofiel Organisatie Basis
 									</div>
@@ -172,7 +172,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="../doc/ap/persoon/" id="doormat">
 									<div class="doormat__title">
 										Applicatieprofiel Persoon Basis
 									</div>
@@ -181,7 +181,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="../doc/ap/dienstencataloog/" id="doormat">
 									<div class="doormat__title">
 										Applicatieprofiel Dienstencataloog
 									</div>
@@ -205,7 +205,7 @@
 						<div id="doormats">
 							<ul class="grid grid--is-stacked js-equal-height-container">
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="generiek.html" id="doormat">
 									<div class="doormat__title">
 										Generiek
 									</div>
@@ -214,7 +214,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="adres.html" id="doormat">
 									<div class="doormat__title">
 										Adres
 									</div>
@@ -223,7 +223,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="organisatie.html" id="doormat">
 									<div class="doormat__title">
 										Organisatie
 									</div>
@@ -232,7 +232,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="persoon.html" id="doormat">
 									<div class="doormat__title">
 										Persoon
 									</div>
@@ -241,7 +241,7 @@
 
 
 								<li class="col--4-12 col--1-2--s col--12-12--xs">
-									<a class="doormat js-equal-height u-mobile-no-equal-height" href="https://overheid.vlaanderen.be/OSLO-CRAB-als-gelinkte-Open-Data" id="doormat">
+									<a class="doormat js-equal-height u-mobile-no-equal-height" href="dienst.html" id="doormat">
 									<div class="doormat__title">
 										Dienst
 									</div>
@@ -263,7 +263,7 @@
 					<p>Raadpleeg hier de beschikbare codelijsten per applicatieprofiel.</p>
 					<br>
 
-					<p>De volgende applicatieprofielen definiëren geen codelijsten: Generiek Basis, Adresregister, Organisatie Basis, Persoon Basis, Persoon Burgerloket.</p>
+					<p>De volgende applicatieprofielen definiëren geen codelijsten: Generiek Basis, Adresregister, Organisatie Basis, Persoon Basis.</p>
 					<br>
 
 					<div class="info-block__content">
@@ -289,11 +289,6 @@
 								<li><a class="link--icon--caret" href="ttp://publications.europa.eu/mdr/authority/atu/index.html">ATU</a></li>
 								<li><a class="link--icon--caret" href="https://unstats.un.org/unsd/cr/registry/regcst.asp?Cl=4">COFOG</a></li>
 								<li><a class="link--icon--caret" href="http://publications.europa.eu/mdr/authority/currency/">NAL Currency</a></li>
-							</ul>
-
-							<ul class="link-list link-list link-list--small col--1-4 col--1-3--m col--1-2--s">
-								<li class="u-hr"><h5 class="h5">Dienstverlening Transactiemodel</h5></li>
-								<li><a class="link--icon--caret" href="../dienst/statusvlaamsefase.html" target="_blank">StatusVlaamsFase</a></li>
 							</ul>
 							<!-- end component -->
 						</div>
