--- a/ns/organisatie.html
+++ b/ns/organisatie.html
@@ -48,7 +48,7 @@
 
                         <dt>Laatste versie</dt>
 
-                        <dd><a href="http://data.vlaanderen.be/ns/besluit">http://data.vlaanderen.be/ns/organisatie</a>
+                        <dd><a href="http://data.vlaanderen.be/ns/organisatie">http://data.vlaanderen.be/ns/organisatie</a>
                         </dd>
 
                         
