--- a/ns/persoon.html
+++ b/ns/persoon.html
@@ -48,7 +48,7 @@
 
                         <dt>Laatste versie</dt>
 
-                        <dd><a href="http://data.vlaanderen.be/ns/besluit">http://data.vlaanderen.be/ns/persoon</a>
+                        <dd><a href="http://data.vlaanderen.be/ns/persoon">http://data.vlaanderen.be/ns/persoon</a>
                         </dd>
 
                         
