Tools section update

--- a/index.html
+++ b/index.html
@@ -301,44 +301,28 @@
 				<div class="layout layout--wide">
 					<h2 class="h2 u-named-anchor" id="Tools">Tools</h2>
 
-					<div class="grid grid--is-stacked u-spacer">
-						<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight" href="https://github.com/Informatievlaanderen/OSLO-EA-to-RDF" target="_blank">
-							<article>
-								<header class="spotlight__header">
-
-
-									<div class="spotlight__title-wrapper">
-										<h1 class="spotlight__title">OSLO-EA-to-RDF</h1>
-									</div>
-								</header>
-
-
-								<div class="spotlight__text">
-									Deze tool werd ontwikkeld als onderdeel van het OSLO² project en biedt gebruikers een geautomatiseerde manier om vocabularia te creëren op basis van een Enterprise Architect bestand. 
-								</div>
-							</article></a>
-						</div>
-
-
-						<div class="col--3-12 col--4-12--m col--6-12--s col--1-1--xs">
-							<a class="spotlight" href="https://github.com/Informatievlaanderen/OSLO-SpecificationGenerator" target="_blank" >
-							<article>
-								<header class="spotlight__header">
-
-
-									<div class="spotlight__title-wrapper">
-										<h1 class="spotlight__title">OSLO-SpecificationGenerator</h1>
-									</div>
-								</header>
-
-
-								<div class="spotlight__text">
-									Deze tool werd ontwikkeld als onderdeel van het OSLO² project en dient om op basis van RDF vocabularia automatisch specificatiedocumenten in HTML te creëren via een Command Line Interface (CLI).
-								</div>
-							</article></a>
-						</div>
-					</div>
+			        <div class="grid grid--is-stacked u-spacer">
+			          <div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+			            <a href="https://github.com/Informatievlaanderen/OSLO-EA-to-RDF" class="spotlight">
+			              <article>
+			                <h1 class="spotlight__title">OSLO-EA-to-RDF</h1>
+			                <div class="spotlight__data">
+			                  <div class="spotlight__data__value">Deze tool werd ontwikkeld als onderdeel van het OSLO² project en biedt gebruikers een geautomatiseerde manier om vocabularia te creëren op basis van een Enterprise Architect bestand.</div>
+			                </div>
+			              </article>
+			            </a>
+			          </div>
+			          <div class="col--4-12 col--6-12--m col--6-12--s col--1-1--xs">
+			            <a href="https://github.com/Informatievlaanderen/OSLO-SpecificationGenerator" class="spotlight">
+			              <article>
+			                <h1 class="spotlight__title">OSLO-SpecificationGenerator</h1>
+			                <div class="spotlight__data">
+			                  <div class="spotlight__data__value">Deze tool werd ontwikkeld als onderdeel van het OSLO² project en dient om op basis van RDF vocabularia automatisch specificatiedocumenten in HTML te creëren via een Command Line Interface (CLI).</div>
+			                </div>
+			              </article>
+			            </a>
+			          </div>
+			        </div>
 				</div>
 			</section>
 
